kubernet_Helm_project/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-class-service
  namespace: ashraful
spec:
  type: NodePort
  selector:
    app: k8s-class
  ports:
    - port: 8000
      targetPort: 3000
